@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.7 2004/10/27 05:12:07 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.8 2004/11/28 02:46:53 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  27 Nov 2004; Andrew Gaffney <agaffney@gentoo.org>
+  Changed the way GLIStorageDevice.py determines the amount a ext2/3 filesystem
+  can be resized.
 
   27 Oct 2004; Preston Cody <codeman@gentoo.org>
   Added some of the final functions to GLIInstallTemplate.
